--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <link rel="stylesheet" href="main.css">
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
     <title>Homes</title>
@@ -20,7 +21,7 @@
                         <h3 class="room_name">{{ value.name }}</h3>
                         <ul>
                             <li>Temperatur: {{ value.temperature }}&#8451;</li>
-                            <li>Luftfuktighet: {{ value.humidity }}</li>
+                            <li>Luftfuktighet: {{ value.humidity }}&#37;</li>
                         </ul>
                         <hr>
                     </li>
